@@ -81,6 +81,9 @@ mendexk - maintained here, by us (akira et al.)
 
 ps2pkm - ?
 
+psutils 1.21 - checked 25oct13
+  https://github.com/rrthomas/psutils/archive/v1.21.tar.gz
+
 ptexenc - ?
 
 seetexk - ?
