@@ -18,9 +18,6 @@ pmx 2.7.0 - checked 11apr13
 ps2eps 1.68 - checked 10may12
   http://tm.uka.de/~bless/ps2eps
 
-psutils 1.21 - checked 25oct13
-  https://github.com/rrthomas/psutils/archive/v1.21.tar.gz
-
 t1utils 1.38 - checked 3oct13
   http://www.lcdf.org/type/
 
