@@ -1,3 +1,7 @@
+2013-12-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-pkgs.m4: Move psutils from ../utils/ to ../texk/.
+
 2013-11-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-freetype2-flags.m4: New layout of installed headers.
